Made all DescEx and Extra values REML conformant
Achieved by adding enclosing <p>..</p> tags to all REML that didn't
have it.

--- a/csdb/collection/arrays.ini
+++ b/csdb/collection/arrays.ini
@@ -140,7 +140,7 @@ Delphi10S=Y
 FPC=Y
 
 [AppendByteArray]
-DescEx="Appends array of bytes <var>B2</var> to the end of byte array <var>B1</var>."
+DescEx="<p>Appends array of bytes <var>B2</var> to the end of byte array <var>B1</var>.</p>"
 Depends=TBytes
 SeeAlso=ConcatByteArrays
 Snip=364.dat
