--- a/csdb/collection/consts.ini
+++ b/csdb/collection/consts.ini
@@ -8,7 +8,7 @@
 [SHIL_Enum]
 Kind=const
 DisplayName=SHIL_* Constants
-DescEx="Constants that can be passed as flags to specify the required image type in calls to the <var>SysImageListHandleEx</var> routine."
+DescEx="<p>Constants that can be passed as flags to specify the required image type in calls to the <var>SysImageListHandleEx</var> routine.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=SysImageListHandleEx
 Snip=332.dat
