--- a/csdb/collection/date.ini
+++ b/csdb/collection/date.ini
@@ -751,7 +751,7 @@ Delphi10S=Y
 FPC=Y
 
 [MSecToDateTime]
-DescEx="Converts the given number of milliseconds to a <var>TDateTime</var> value."
+DescEx="<p>Converts the given number of milliseconds to a <var>TDateTime</var> value.</p>"
 Units=SysUtils
 Snip=458.dat
 Delphi2=N
@@ -797,7 +797,7 @@ Delphi10S=Y
 FPC=Y
 
 [SQLDateToDateTime]
-DescEx="Converts a date in SQL format into a <var>TDateTime</var>."
+DescEx="<p>Converts a date in SQL format into a <var>TDateTime</var>.</p>"
 Extra="<p>Handles only the date component. Any time component is ignored.</p>"
 Units=SysUtils
 SeeAlso=SQLDate
@@ -1225,7 +1225,7 @@ Delphi10S=Y
 FPC=Y
 
 [RFC2822Date]
-DescEx="Returns the RFC 2822 representation of the date (in local time) specified in the <var>LocalTime</var> parameter. The <var>IsDST</var> parameter indicates whether <var>LocalTime</var> is in daylight saving time or not."
+DescEx="<p>Returns the RFC 2822 representation of the date (in local time) specified in the <var>LocalTime</var> parameter. The <var>IsDST</var> parameter indicates whether <var>LocalTime</var> is in daylight saving time or not.</p>"
 Extra="<p>This date format is defined by section 3.3 of <a href="http://www.faqs.org/rfcs/rfc2822.html">RFC 2882</a>.</p>"
 Units=SysUtils,Windows
 Snip=374.dat
@@ -1248,7 +1248,7 @@ Delphi10S=Y
 FPC=Y
 
 [SecondsToTime]
-DescEx="Converts a number of seconds into a <var>TDateTime</var> value."
+DescEx="<p>Converts a number of seconds into a <var>TDateTime</var> value.</p>"
 Extra="<p>This routine uses knowledge of the internal composition of a <var>TDateTime</var>.</p>"
 Units=SysUtils
 Snip=357.dat
