--- a/csdb/collection/encoding.ini
+++ b/csdb/collection/encoding.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [BytesToAnsiString]
-DescEx="Converts the given array of bytes to an ANSI raw byte string, which is returned. The returned string has the code page specified by <var>CodePage</var>."
+DescEx="<p>Converts the given array of bytes to an ANSI raw byte string, which is returned. The returned string has the code page specified by <var>CodePage</var>.</p>"
 Extra="<p>Based on code from the Stack Overflow posting <a href="http://stackoverflow.com/questions/773297/how-can-i-convert-tbytes-to-rawbytestring">How can I convert TBytes to RawByteString?</a>.</p>"
 Units=SysUtils
 Snip=359.dat
