--- a/csdb/collection/file.ini
+++ b/csdb/collection/file.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [CopyFile]
-DescEx="Copies <var>Source</var> file to <var>Dest</var> file, preserving modification date."
+DescEx="<p>Copies <var>Source</var> file to <var>Dest</var> file, preserving modification date.</p>"
 Units=Classes,SysUtils
 SeeAlso=CopyFiles
 Snip=029.dat
@@ -309,7 +309,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetFixedFileVerInfo]
-DescEx="Extracts fixed version information from file named by <var>FileName</var>. If file contains version information it is returned via <var>FFI</var> parameter and function returns True, otherwise False is returned and <var>FFI</var> is undefined."
+DescEx="<p>Extracts fixed version information from file named by <var>FileName</var>.</p><p>If file contains version information it is returned via <var>FFI</var> parameter and function returns True, otherwise False is returned and <var>FFI</var> is undefined.</p>"
 Units=Windows
 SeeAlso=HasVerInfo
 Snip=010.dat
@@ -896,7 +896,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsDirectory]
-DescEx="Returns True if given name is a valid directory and False otherwise. <var>DirName</var> can be any file system name (with or without trailing path delimiter)."
+DescEx="<p>Returns True if given name is a valid directory and False otherwise. <var>DirName</var> can be any file system name (with or without trailing path delimiter).</p>"
 Extra="<p>This routine avoids using <var>DirectoryExists</var> in <mono>FileCtrl</mono> and hence avoids the overhead of using that unit.</p>"
 Units=SysUtils
 Depends=IsFlagSet
@@ -1065,7 +1065,7 @@ Delphi10S=Y
 FPC=Y
 
 [SubDirectoryCount]
-DescEx="Counts all the sub-directories of directory specified by <var>Path</var>. If <var>Recurse</var> is True all sub-directories are counted recursively, otherwise only immediate sub-directories are counted."
+DescEx="<p>Counts all the sub-directories of directory specified by <var>Path</var>.</p><p>If <var>Recurse</var> is True all sub-directories are counted recursively, otherwise only immediate sub-directories are counted.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=IOUtils,Types
 Snip=409.dat
@@ -1088,7 +1088,7 @@ Delphi10S=Y
 FPC=N
 
 [TempFileName]
-DescEx="Returns a unique temporary file name in the user's <mono>Temp</mono> folder. The file name includes the first three characters of <var>Stub</var> followed by hexadecimal characters. If <var>Create</var> is True then the file is created. Returns an empty string on failure."
+DescEx="<p>Returns a unique temporary file name in the user's <mono>Temp</mono> folder. The file name includes the first three characters of <var>Stub</var> followed by hexadecimal characters.</p><p>If <var>Create</var> is True then the file is created. Returns an empty string on failure.</p>"
 Extra="<p><strong>Note:</strong> Even if <var>ACreate</var> is false the file will be created momentarily. This means that <var>APath</var> must exist and the current user must have write access to the path or the routine will fail.</p>"
 Units=Windows,SysUtils
 SeeAlso=TempFolder,TempFileNameEx
@@ -1112,7 +1112,7 @@ Delphi10S=Y
 FPC=Y
 
 [TempFileNameEx]
-DescEx="Returns a unique temporary file name in the directory specified in <var>APath</var>. The file name includes the first three characters of <var>AStub</var> followed by hexadecimal characters. If <var>ACreate</var> is True then the file is created. Returns an empty string on failure."
+DescEx="<p>Returns a unique temporary file name in the directory specified in <var>APath</var>. The file name includes the first three characters of <var>AStub</var> followed by hexadecimal characters.</p><p>If <var>ACreate</var> is True then the file is created. Returns an empty string on failure.</p>"
 Extra="<p><strong>Note:</strong> Even if <var>ACreate</var> is false the file will be created momentarily. This means that <var>APath</var> must exist and the current user must have write access to the path or the routine will fail.</p><p>From Bill Miller's snippets collection.</p>"
 Units=Windows,SysUtils
 SeeAlso=TempFileName
