--- a/csdb/collection/graphics.ini
+++ b/csdb/collection/graphics.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [AdjustColorBrightness]
-DescEx="Adjusts the brightness of colour <var>Color</var> by a specified <var>Delta</var> in range -255..255."
+DescEx="<p>Adjusts the brightness of colour <var>Color</var> by a specified <var>Delta</var> in range -255..255.</p>"
 Extra="<p>Based on code found on the former EFG's Delphi Reference Library.</p>"
 Units=Windows,Graphics
 SeeAlso=AdjustBitmapBrightness
@@ -30,7 +30,7 @@ Delphi10S=Y
 FPC=N
 
 [BitmapToMetafile]
-DescEx="Converts a bitmap into an extended meta file object. Metafile <var>EMF</var> is updated to contain a copy of bitmap <var>Bmp</var>."
+DescEx="<p>Converts a bitmap into an extended meta file object. Metafile <var>EMF</var> is updated to contain a copy of bitmap <var>Bmp</var>.</p>"
 Units=Graphics
 SeeAlso=GraphicToBitmap
 Snip=178.dat
@@ -54,7 +54,7 @@ FPC=N
 
 [CloneCursorAsBitmap]
 DescEx="<p>Creates and returns a bitmap object that contains a copy of the given cursor.</p><p>The bitmap has the pixel format specified by <var>PixelFmt</var>. If <var>PixelFmt</var> is <var>pfCustom</var>, then the default format is used.</p><p> <var>TransparentColor</var> specifies the colour in the cursor that is to be drawn as transparent in the bitmap. <var>TransparentColor</var> has no effect if it is <var>clNone</var>.</p>"
-Extra="<strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function."
+Extra="<p><strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function.</p>"
 Units=Controls,Graphics,Forms
 Depends=CloneCursorHandleAsBitmap
 SeeAlso=CloneCursorHandleAsBitmap,CloneCursorAsBitmap,CloneCursorAsIcon,CloneCursorHandleAsIcon,CursorHandleToBitmap,CursorToBitmap
@@ -79,7 +79,7 @@ FPC=N
 
 [CloneCursorAsIcon]
 DescEx="<p>Creates and returns an icon object that contains a copy of the given cursor.</p>"
-Extra="<strong>Note:</strong> The caller is responsible for freeing the icon created by this function."
+Extra="<p><strong>Note:</strong> The caller is responsible for freeing the icon created by this function.</p>"
 Units=Controls,Graphics,Forms
 Depends=CloneCursorHandleAsIcon
 SeeAlso=CloneCursorAsBitmap,CloneCursorHandleAsBitmap,CloneCursorHandleAsIcon,CursorHandleToBitmap,CursorToBitmap
@@ -104,7 +104,7 @@ FPC=N
 
 [CloneCursorHandleAsBitmap]
 DescEx="<p>Creates and returns a bitmap object that contains a copy of the cursor whose handle is given by <var>Handle</var>.</p><p>The bitmap has the pixel format specified by <var>PixelFmt</var>. If <var>PixelFmt</var> is <var>pfCustom</var>, then the default format is used.</p><p><var>TransparentColor</var> specifies the colour in the cursor that is to be drawn as transparent in the bitmap. <var>TransparentColor</var> has no effect if it is <var>clNone</var>.</p>"
-Extra="<strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function."
+Extra="<p><strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function.</p>"
 Units=Windows,Graphics
 Depends=CloneGraphicAsBitmap
 SeeAlso=CloneCursorAsBitmap,CloneCursorAsIcon,CloneCursorHandleAsIcon,CursorHandleToBitmap,CursorToBitmap
@@ -129,7 +129,7 @@ FPC=N
 
 [CloneCursorHandleAsIcon]
 DescEx="<p>Creates and returns an icon object that contains a copy of the cursor with the given handle.</p>"
-Extra="<strong>Note:</strong> The caller is responsible for freeing the icon created by this function."
+Extra="<p><strong>Note:</strong> The caller is responsible for freeing the icon created by this function.</p>"
 Units=Windows,Graphics
 SeeAlso=CloneCursorAsBitmap,CloneCursorAsIcon,CloneCursorHandleAsBitmap,CursorHandleToBitmap,CursorToBitmap
 Snip=274.dat
@@ -153,7 +153,7 @@ FPC=N
 
 [CloneGraphicAsBitmap]
 DescEx="<p>Creates and returns a bitmap object that contains a copy of given graphic object <var>Src</var>.</p><p>The bitmap has the pixel format specified by <var>PixelFmt</var>. If <var>PixelFmt</var> is <var>pfCustom</var>, then the default format is used, unless <var>Src</var> is a bitmap when its own format is used.</p><p>If <var>Src</var> is transparent then the bitmap is set to transparent and <var>TransparentColor</var> is used as the bitmap's transparent colour. <var>TransparentColor</var> is ignored if it is <var>clNone</var> or if <var>Src</var> is not transparent.</p>"
-Extra="<strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function."
+Extra="<p><strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function.</p>"
 Units=Graphics
 Depends=GraphicToBitmap
 SeeAlso=GraphicToBitmap,CloneJPEGAsBitmap
@@ -178,7 +178,7 @@ FPC=N
 
 [CloneJPEGAsBitmap]
 DescEx="<p>Creates and returns a bitmap object that contains a copy of the given JPEG image.</p>"
-Extra="<strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function."
+Extra="<p><strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function.</p>"
 Units=Graphics,JPEG
 SeeAlso=JPEGFileToBitmapFile,CloneGraphicAsBitmap
 Snip=279.dat
@@ -201,7 +201,7 @@ Delphi10S=Y
 FPC=N
 
 [ColorToRGBTriple]
-DescEx="Converts the given <var>TColor</var> value into an RGB triple value, which is returned."
+DescEx="<p>Converts the given <var>TColor</var> value into an RGB triple value, which is returned.</p>"
 Extra="<p>System colours are converted to their actual values before conversion.</p>"
 Units=Windows,Graphics
 Depends=ExtractRGB
@@ -392,7 +392,7 @@ Delphi10S=Y
 FPC=N
 
 [ExtractRGB]
-DescEx="Extracts constituent RGB values from the given colour and returns them via the <var>Red</var>, <var>Green</var> and <var>Blue</var> parameters."
+DescEx="<p>Extracts constituent RGB values from the given colour and returns them via the <var>Red</var>, <var>Green</var> and <var>Blue</var> parameters.</p>"
 Extra="<p>System colours are converted to their actual values before extracting the RGB values.</p>"
 Units=Graphics,Windows
 SeeAlso=ColorToRGBTriple
@@ -438,7 +438,7 @@ Delphi10S=Y
 FPC=N
 
 [GetIconANDBitmask]
-DescEx="Copies the given icon's <em>AND</em> bitmask to bitmap <var>Mask</var>."
+DescEx="<p>Copies the given icon's <em>AND</em> bitmask to bitmap <var>Mask</var>.</p>"
 Units=Graphics,Windows,SysUtils
 SeeAlso=IsCursorIcon,IsColorIcon,GetIconHotspot,GetIconXORBitmask
 Snip=116.dat
@@ -461,7 +461,7 @@ Delphi10S=Y
 FPC=N
 
 [GetIconXORBitmask]
-DescEx="Copies the given icon's <em>XOR</em> bitmask to bitmap <var>Mask</var>."
+DescEx="<p>Copies the given icon's <em>XOR</em> bitmask to bitmap <var>Mask</var>.</p>"
 Units=Graphics,Windows,SysUtils,Classes
 SeeAlso=IsCursorIcon,IsColorIcon,GetIconHotspot,GetIconANDBitmask
 Snip=117.dat
@@ -671,7 +671,7 @@ Delphi10S=Y
 FPC=N
 
 [RGBTripleToColor]
-DescEx="Converts an RGB triple value into a <var>TColor</var> value."
+DescEx="<p>Converts an RGB triple value into a <var>TColor</var> value.</p>"
 Units=Windows,Graphics
 SeeAlso=ColorToRGBTriple
 Snip=096.dat
@@ -694,7 +694,7 @@ Delphi10S=Y
 FPC=N
 
 [SetDefaultFont]
-DescEx="Sets the given <var>TFont</var> object to the default GUI font for the operating system."
+DescEx="<p>Sets the given <var>TFont</var> object to the default GUI font for the operating system.</p>"
 Extra="<p>From Bill Miller's snippets collection.</p>"
 Units=Windows,Graphics
 SeeAlso=SetDesktopIconFont
@@ -815,7 +815,7 @@ Delphi10S=Y
 FPC=N
 
 [AdjustBitmapBrightness]
-DescEx="Changes the brightness of bitmap <var>Bmp</var> by a given <var>Delta</var> value in range -255..+255."
+DescEx="<p>Changes the brightness of bitmap <var>Bmp</var> by a given <var>Delta</var> value in range -255..+255.</p>"
 Extra="<p>Based on code found on the former EFG's Delphi Reference Library.</p> <p><strong>Note from EFG:</strong> Normally a <var>pf24bit</var> bitmap scanline would be accessed as a type <mono>TRGBTripleArray = array[Word] of TRGBTriple</mono>, but since we can treat the three color components (<var>rgbtRed</var>, <var>rgbtGreen</var>, <var>rgbtBlue</var>) in exactly the same way, we can access the scanline as a <var>pByteArray</var> of <mono>3 * Bitmap.Width</mono> bytes.</p>"
 Units=SysUtils,Graphics
 SeeAlso=AdjustColorBrightness
@@ -917,7 +917,7 @@ Delphi10S=Y
 FPC=N
 
 [ColorToHSB]
-DescEx="Converts the given <var>TColor</var> value to a <var>THSBColor</var> value, which is returned."
+DescEx="<p>Converts the given <var>TColor</var> value to a <var>THSBColor</var> value, which is returned.</p>"
 Extra="<p>System colours are converted to their actual values before conversion.</p>"
 Units=Graphics
 Depends=THSBColor,ColorToRGBTriple,RGBToHSB
@@ -1453,7 +1453,7 @@ FPC=N
 
 [ScaleBitmap_A]
 DisplayName="ScaleBitmap (copy overload)"
-DescEx="Performs a high quality scaling of bitmap <var>ASrcBmp</var> and copies the result into <var>ADestBmp</var>. The required scale factor is given by <var>AScaling</var>."
+DescEx="<p>Performs a high quality scaling of bitmap <var>ASrcBmp</var> and copies the result into <var>ADestBmp</var>. The required scale factor is given by <var>AScaling</var>.</p>"
 Extra="<p>Modified from code contributed by Montor.</p>"
 Units=Graphics,Types
 Depends=ScaleRect,RectWidth,RectHeight,HalftoneStretch_A
@@ -1479,7 +1479,7 @@ FPC=N
 
 [ScaleBitmap_B]
 DisplayName="ScaleBitmap (inplace overload)"
-DescEx="Performs a high quality scaling of the given bitmap by scale factor <var>AScaling</var>. The bitmap is modified in place."
+DescEx="<p>Performs a high quality scaling of the given bitmap by scale factor <var>AScaling</var>. The bitmap is modified in place.</p>"
 Extra="<p>Slightly modified from code contributed by Montor.</p>"
 Units=Graphics
 Depends=ScaleBitmap_A
@@ -1579,7 +1579,7 @@ FPC=Y
 
 [TColorRec]
 Kind=type
-DescEx="Cracker record that provides several different views of a <var>TColor</var> value and allows it to be assembled from its constituent parts."
+DescEx="<p>Cracker record that provides several different views of a <var>TColor</var> value and allows it to be assembled from its constituent parts.</p>"
 Extra="<p>Contributed by Montor.</p> <p><strong>Note:</strong> Care needs to be taken when using <var>SysFlag</var> to detect a system colour, because <var>SysFlag</var> will be equal to $FF if a normal colour has an alpha transparency of $FF.</p>"
 Snip=375.dat
 Delphi2=Y
