--- a/csdb/collection/hex.ini
+++ b/csdb/collection/hex.ini
@@ -201,7 +201,7 @@ FPC=Y
 
 [TryHexToInt64]
 DescEx="<p>Attempts to convert the given hexadecimal string into a 64 bit integer.</p><p>Returns True on success and set <var>Value</var> to the converted value. Returns False on error, leaving <var>Value</var> undefined.</p>"
-Extra="</p>The hexadecimal string must contain only valid hex digits, optionally prefixed by either '$' or '0x'.</p>"
+Extra="<p>The hexadecimal string must contain only valid hex digits, optionally prefixed by either '$' or '0x'.</p>"
 Depends=AddHexPrefix
 SeeAlso=HexToInt64,HexToInt64Def,TryHexToBuf,TryHexToInt
 TestInfo=advanced
