--- a/csdb/collection/io.ini
+++ b/csdb/collection/io.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [FileToString]
-DescEx="Reads text in the default ANSI encoding from file named by <var>FileName</var> into a string, which is returned."
+DescEx="<p>Reads text in the default ANSI encoding from file named by <var>FileName</var> into a string, which is returned.</p>"
 Units=Classes,SysUtils
 Depends=StreamToString
 SeeAlso=StringToFile,UnicodeFileToWideString,WideStringToUnicodeFile
@@ -30,7 +30,7 @@ Delphi10S=Y
 FPC=Y
 
 [StreamToString]
-DescEx="Reads text in the default ANSI encoding from stream <var>Stm</var> into a string, which is returned. The stream is read from the current position."
+DescEx="<p>Reads text in the default ANSI encoding from stream <var>Stm</var> into a string, which is returned. The stream is read from the current position.</p>"
 Units=Classes
 SeeAlso=StringToStream,WideStringToUnicodeStream,UnicodeStreamToWideString
 Snip=078.dat
@@ -53,7 +53,7 @@ Delphi10S=Y
 FPC=Y
 
 [StringToFile]
-DescEx="Writes string <var>Src</var> to text file named by <var>FileName</var>. Text is written in default ANSI encoding."
+DescEx="<p>Writes string <var>Src</var> to text file named by <var>FileName</var>. Text is written in default ANSI encoding.</p>"
 Units=Classes
 Depends=StringToStream
 SeeAlso=FileToString,UnicodeFileToWideString,WideStringToUnicodeFile
@@ -77,7 +77,7 @@ Delphi10S=Y
 FPC=Y
 
 [StringToStream]
-DescEx="Writes string <var>Str</var> into stream <var>Stm</var> at the current stream position. Text is written in default ANSI encoding."
+DescEx="<p>Writes string <var>Str</var> into stream <var>Stm</var> at the current stream position. Text is written in default ANSI encoding.</p>"
 Units=Classes
 SeeAlso=StreamToString,WideStringToUnicodeStream,UnicodeStreamToWideString
 Snip=080.dat
@@ -100,7 +100,7 @@ Delphi10S=Y
 FPC=Y
 
 [WideStringToUnicodeFile]
-DescEx="Writes wide string <var>Str</var> to Unicode text file, named by <var>FileName</var>, in UTF16 little endian format with byte order mark."
+DescEx="<p>Writes wide string <var>Str</var> to Unicode text file, named by <var>FileName</var>, in UTF16 little endian format with byte order mark.</p>"
 Units=Classes
 Depends=WideStringToUnicodeStream
 SeeAlso=UnicodeFileToWideString,FileToString,StringToFile
@@ -124,7 +124,7 @@ Delphi10S=Y
 FPC=Y
 
 [WideStringToUnicodeStream]
-DescEx="Writes wide string <var>Str</var> to stream <var>Stm</var> in Unicode UTF16 little endian format, with byte order mark."
+DescEx="<p>Writes wide string <var>Str</var> to stream <var>Stm</var> in Unicode UTF16 little endian format, with byte order mark.</p>"
 Units=Windows,Classes
 SeeAlso=UnicodeStreamToWideString,StringToStream,StreamToString
 Snip=084.dat
