--- a/csdb/collection/maths.ini
+++ b/csdb/collection/maths.ini
@@ -192,7 +192,7 @@ Delphi10S=Y
 FPC=Y
 
 [NormalizeRect]
-DescEx="Normalises the given rectangle so that <var>Left</var> &lt;= <var>Right</var> and <var>Top</var> &lt;= <var>Bottom</var>."
+DescEx="<p>Normalises the given rectangle so that <var>Left</var> &lt;= <var>Right</var> and <var>Top</var> &lt;= <var>Bottom</var>.</p>"
 Extra="<p>Inspired by code published by Marco Cantù in supplementary chapter 22 of Mastering Delphi 5.</p>"
 Units=Windows
 Depends=ExchangeInt
@@ -1336,7 +1336,7 @@ FPC=Y
 
 [ZoomRatio_A]
 DisplayName="ZoomRatio (Integer overload)"
-DescEx="Calculates and returns the largest scaling that can be applied to a rectangle of width <var>SrcWidth</var> and height <var>SrcHeight</var> to fit it, without changing the aspect ratio, within a second rectangle of width <var>DestWidth</var> and height <var>DestHeight</var>."
+DescEx="<p>Calculates and returns the largest scaling that can be applied to a rectangle of width <var>SrcWidth</var> and height <var>SrcHeight</var> to fit it, without changing the aspect ratio, within a second rectangle of width <var>DestWidth</var> and height <var>DestHeight</var>.</p>"
 Extra="<p>Slightly modified from code contributed by Montor.</p>"
 Units=Math
 SeeAlso=ZoomRatio_B,ZoomRatio_C,ScaleRect,StretchRect_A,StretchRect_B,ResizeRect_A,ResizeRect_B
@@ -1361,7 +1361,7 @@ FPC=Y
 
 [ZoomRatio_B]
 DisplayName="ZoomRatio (TSize overload)"
-DescEx="Calculates and returns the largest scaling that can be applied to a rectangle of size <var>SrcSize</var> to fit it, without changing the aspect ratio, within a second rectangle of size <var>DestSize</var>."
+DescEx="<p>Calculates and returns the largest scaling that can be applied to a rectangle of size <var>SrcSize</var> to fit it, without changing the aspect ratio, within a second rectangle of size <var>DestSize</var>.</p>"
 Units=Types
 Depends=ZoomRatio_A
 SeeAlso=ZoomRatio_A,ZoomRatio_C,ScaleRect,StretchRect_A,StretchRect_B,ResizeRect_A,ResizeRect_B
@@ -1386,7 +1386,7 @@ FPC=Y
 
 [ZoomRatio_C]
 DisplayName="ZoomRatio (TRect overload)"
-DescEx="Calculates and returns the largest scaling that can be applied to rectangle <var>SrcRect</var> to fit it, without changing the aspect ratio, within rectangle <var>DestRect</var>."
+DescEx="<p>Calculates and returns the largest scaling that can be applied to rectangle <var>SrcRect</var> to fit it, without changing the aspect ratio, within rectangle <var>DestRect</var>.</p>"
 Units=Types
 Depends=RectSize,ZoomRatio_B
 SeeAlso=ZoomRatio_A,ZoomRatio_B,ScaleRect,StretchRect_A,StretchRect_B,ResizeRect_A,ResizeRect_B
