--- a/csdb/collection/shell.ini
+++ b/csdb/collection/shell.ini
@@ -216,7 +216,7 @@ Delphi10S=Y
 FPC=Y
 
 [FreePIDL]
-DescEx="Frees the memory used by the item ID list pointed to by <var>PIDL</var>. The memory is freed using the shell allocator."
+DescEx="<p>Frees the memory used by the item ID list pointed to by <var>PIDL</var>. The memory is freed using the shell allocator.</p>"
 Units=ActiveX,Windows,ShlObj
 Snip=052.dat
 Delphi2=N
@@ -311,7 +311,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetKnownFolderPath]
-DescEx="Returns the &quot;known folder path&quot; specified by <var>FolderID</var>, or the empty string if <var>FolderID</var> is not valid on the host operating system."
+DescEx="<p>Returns the &quot;known folder path&quot; specified by <var>FolderID</var>, or the empty string if <var>FolderID</var> is not valid on the host operating system.</p>"
 Extra="<p>This routine requires Windows Vista or later.</p><p>Contributed by Ariel Rivas.<p>"
 Units=ShlObj,ActiveX
 SeeAlso=SpecialFolderPath
@@ -406,7 +406,7 @@ Delphi10S=Y
 FPC=Y
 
 [PIDLToFolderPath]
-DescEx="Returns the full path of the file system folder identified by <var>PIDL</var>, or returns the empty string if <var>PIDL</var> identifies a virtual folder or is not valid."
+DescEx="<p>Returns the full path of the file system folder identified by <var>PIDL</var>, or returns the empty string if <var>PIDL</var> identifies a virtual folder or is not valid.</p>"
 Units=Windows,ShlObj
 SeeAlso=SpecialFolderPath,FreePIDL
 Snip=053.dat
@@ -574,7 +574,7 @@ FPC=Y
 
 [IsIEInstalled]
 DescEx="<p>Checks if Internet Explorer is installed on the system.</p>"
-Extra="Contributed by Michael Rockett and renamed."
+Extra="<p>Contributed by Michael Rockett and renamed.</p>"
 Depends=ProgIDInstalled
 Snip=566.dat
 Delphi2=N
@@ -596,7 +596,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsSpecialFolderSupported]
-DescEx="Checks if the special folder specified by <var>CSIDL</var> is supported on the host operating system."
+DescEx="<p>Checks if the special folder specified by <var>CSIDL</var> is supported on the host operating system.</p>"
 Extra="<p>The <var>CSIDL_*</var> constants can be found in the <mono>ShlObj</mono> and (in later version of Delphi) <mono>ShFolder</mono> units.</p>"
 Units=ShlObj,Windows
 Depends=FreePIDL
