--- a/csdb/collection/string.ini
+++ b/csdb/collection/string.ini
@@ -52,7 +52,7 @@ Delphi10S=Y
 FPC=Y
 
 [CountDelims]
-DescEx="Returns the number of occurences of any character from <var>Delims</var> in the given string <var>S</var>."
+DescEx="<p>Returns the number of occurences of any character from <var>Delims</var> in the given string <var>S</var>.</p>"
 Units=SysUtils
 SeeAlso=ContainsDelims
 Snip=032.dat
@@ -75,7 +75,7 @@ Delphi10S=Y
 FPC=Y
 
 [CountUnquotedWords]
-DescEx="Returns the number of <em>space</em> delimited words in string <var>S</var>. Any words enclosed by the quote character <var>AQuote</var> are counted as one word."
+DescEx="<p>Returns the number of <em>space</em> delimited words in string <var>S</var>. Any words enclosed by the quote character <var>AQuote</var> are counted as one word.</p>"
 Extra="<p>Contributed by Rubem Rocha.</p>"
 Units=Classes
 SeeAlso=ExplodeUnquotedWords,CountWords,WordCount
@@ -526,7 +526,7 @@ Delphi10S=Y
 FPC=Y
 
 [ChangeChar]
-DescEx="Replaces all occurrences the character <var>ASearch</var> in <var>AString</var> with the <var>AReplace</var> character, and returns the resulting string."
+DescEx="<p>Replaces all occurrences the character <var>ASearch</var> in <var>AString</var> with the <var>AReplace</var> character, and returns the resulting string.</p>"
 Extra="<p><warning>Warning:</warning> This routine replaces code points rather than characters. It is <strong>not safe</strong> for use with ANSI multi-byte character sets or, on Unicode versions of Delphi, with characters outside the Unicode <a href="https://en.wikipedia.org/wiki/Plane_(Unicode)#Basic_Multilingual_Plane">basic multilingual plane</a>.</p><p>Contributed by Bill Miller.</p>"
 Snip=349.dat
 Delphi2=Y
@@ -762,7 +762,7 @@ Delphi10S=Y
 FPC=Y
 
 [ExplodeWords]
-DescEx="Extracts a list of white space delimited words from string <var>S</var> and returns the number of words found. The extracted words are stored in stringlist <var>Words</var>, overwriting any existing content."
+DescEx="<p>Extracts a list of white space delimited words from string <var>S</var> and returns the number of words found. The extracted words are stored in stringlist <var>Words</var>, overwriting any existing content.</p>"
 Extra="<p><strong>Note:</strong> This function treats only the <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono> characters as white space.</p>"
 Units=Classes
 Depends=ExplodeStr,CompressWhiteSpace
@@ -998,7 +998,7 @@ Delphi10S=Y
 FPC=Y
 
 [PadCenter]
-DescEx="Centre aligns string <var>AString</var> within a string of size <var>AWidth</var> and returns the result. The string is padded as necessary with character <var>AChar</var>."
+DescEx="<p>Centre aligns string <var>AString</var> within a string of size <var>AWidth</var> and returns the result. The string is padded as necessary with character <var>AChar</var>.</p>"
 Extra="<p>When an odd number of padding characters is required, the extra character is added on the right.</p>"
 SeeAlso=PadLeft,PadRight
 Snip=246.dat
@@ -1021,7 +1021,7 @@ Delphi10S=Y
 FPC=Y
 
 [PadLeft]
-DescEx="Left aligns string <var>AString</var> within a string of size <var>AWidth</var> and returns the result. The string is padded on the right as necessary with character <var>AChar</var>."
+DescEx="<p>Left aligns string <var>AString</var> within a string of size <var>AWidth</var> and returns the result. The string is padded on the right as necessary with character <var>AChar</var>.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=PadCenter,PadRight
 Snip=247.dat
@@ -1162,7 +1162,7 @@ Delphi10S=Y
 FPC=Y
 
 [StripAccelChars]
-DescEx="Strips all accelerator ('<mono>&amp;</mono>') characters from the given string and returns the resulting string."
+DescEx="<p>Strips all accelerator ('<mono>&amp;</mono>') characters from the given string and returns the resulting string.</p>"
 Extra="<p>Renamed from a routine contributed by Rubem Nascimento da Rocha.</p>"
 Units=SysUtils
 TestInfo=advanced
@@ -1186,7 +1186,7 @@ Delphi10S=Y
 FPC=Y
 
 [StripLastChar]
-DescEx="Removes the last character from the string <var>S</var> and returns the resulting string. If <var>S</var> is empty then it is returned unchanged."
+DescEx="<p>Removes the last character from the string <var>S</var> and returns the resulting string. If <var>S</var> is empty then it is returned unchanged.</p>"
 Extra="<p><strong>Note:</strong> This routine is not suitable for use with multi-byte character sets.</p><p>Contributed by Guru Kathiresan.</p>"
 SeeAlso=LastChar
 Snip=382.dat
@@ -1280,7 +1280,7 @@ Delphi10S=Y
 FPC=Y
 
 [TrimChar]
-DescEx="Trims occurrences of character <var>C</var> from both ends of string <var>S</var> and returns the result."
+DescEx="<p>Trims occurrences of character <var>C</var> from both ends of string <var>S</var> and returns the result.</p>"
 Extra="<p>The character to be trimmed must be a single byte character.</p>"
 Depends=TrimLeftChar,TrimRightChar
 SeeAlso=TrimLeftChar,TrimRightChar
@@ -1304,7 +1304,7 @@ Delphi10S=Y
 FPC=Y
 
 [TrimLeftChar]
-DescEx="Trims occurrences of character <var>C</var> from the start of string <var>S</var> and returns the result."
+DescEx="<p>Trims occurrences of character <var>C</var> from the start of string <var>S</var> and returns the result.</p>"
 Extra="<p>The character to be trimmed must be a single byte character.</p>"
 SeeAlso=TrimChar,TrimRightChar
 Snip=196.dat
@@ -1327,7 +1327,7 @@ Delphi10S=Y
 FPC=Y
 
 [TrimRightChar]
-DescEx="Trims occurrences of character <var>C</var> from the end of string <var>S</var> and returns the result."
+DescEx="<p>Trims occurrences of character <var>C</var> from the end of string <var>S</var> and returns the result.</p>"
 Extra="<p>The character to be trimmed must be a single byte character.</p>"
 SeeAlso=TrimChar,TrimLeftChar
 Snip=197.dat
@@ -1442,7 +1442,7 @@ Delphi10S=Y
 FPC=Y
 
 [QuoteSpacedString]
-DescEx="If string <var>S</var> contains white space it is surrounded in the quotes specified by <var>Quote</var> and the result is returned. If <var>S</var> does not contain white space it is returned unchanged."
+DescEx="<p>If string <var>S</var> contains white space it is surrounded in the quotes specified by <var>Quote</var> and the result is returned. If <var>S</var> does not contain white space it is returned unchanged.</p>"
 Extra="<p>Any quote characters already contained within the string are left unchanged: they are not escaped.</p><p><strong>Note:</strong> This function recognises only the <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono> characters as white space.</p>"
 Depends=ContainsWhiteSpace
 Snip=249.dat
@@ -1465,7 +1465,7 @@ Delphi10S=Y
 FPC=Y
 
 [ReduceStr]
-DescEx="Reduces the length of string <var>S</var> by the number of characters given by <var>ReduceBy</var> and returns the result."
+DescEx="<p>Reduces the length of string <var>S</var> by the number of characters given by <var>ReduceBy</var> and returns the result.</p>"
 Extra="<p><warning>Warning:</warning> This function actually operates on code points rather than characters, making it unsafe for use with ANSI multi-byte character sets or characters outside the Unicode <a href="https://en.wikipedia.org/wiki/Plane_(Unicode)#Basic_Multilingual_Plane">basic multilingual plane</a>.</p><p>Contributed by Bill Miller.</p>"
 Snip=350.dat
 Delphi2=Y
