--- a/csdb/collection/structs.ini
+++ b/csdb/collection/structs.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [BoundsF]
-DescEx="Constructs and returns a <var>TRectF</var> record with the given top-left coordinate, width and height."
+DescEx="<p>Constructs and returns a <var>TRectF</var> record with the given top-left coordinate, width and height.</p>"
 SeeAlso=RectF,TRectF
 Depends=TRectF
 Snip=493.dat
@@ -29,7 +29,7 @@ Delphi10S=Y
 FPC=Y
 
 [PointF]
-DescEx="Constructs and returns a <var>TPointF</var> record with the given x &amp; y coordinates."
+DescEx="<p>Constructs and returns a <var>TPointF</var> record with the given x &amp; y coordinates.</p>"
 SeeAlso=TPointF,RectF
 Depends=TPointF
 Snip=491.dat
@@ -71,7 +71,7 @@ Delphi10S=Y
 FPC=Y
 
 [RectF]
-DescEx="Constructs and returns a <var>TRectF</var> record with the given left, top, right &amp; bottom coordinates."
+DescEx="<p>Constructs and returns a <var>TRectF</var> record with the given left, top, right &amp; bottom coordinates.</p>"
 SeeAlso=BoundsF,PointF,TRectF
 Depends=TRectF
 Snip=492.dat
