--- a/csdb/collection/sys.ini
+++ b/csdb/collection/sys.ini
@@ -124,7 +124,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetParentProcessID]
-DescEx="Returns the ID of the process that is the parent of the process identified by <var>PID</var>."
+DescEx="<p>Returns the ID of the process that is the parent of the process identified by <var>PID</var>.</p>"
 Units=Windows,TlHelp32
 SeeAlso=GetWindowProcessID
 Snip=240.dat
@@ -313,7 +313,7 @@ Delphi10S=Y
 FPC=N
 
 [GetWindowThreadID]
-DescEx="Returns the identifier of the thread that created the window with handle <var>Wnd</var>, or -1 if <var>Wnd</var> is invalid or if the thread can't be found."
+DescEx="<p>Returns the identifier of the thread that created the window with handle <var>Wnd</var>, or -1 if <var>Wnd</var> is invalid or if the thread can't be found.</p>"
 Units=Windows
 SeeAlso=GetWindowProcessID
 Snip=241.dat
@@ -452,7 +452,7 @@ Delphi10S=Y
 FPC=Y
 
 [Pause]
-DescEx="Pauses for <var>ADelay</var> milliseconds before returning."
+DescEx="<p>Pauses for <var>ADelay</var> milliseconds before returning.</p>"
 Extra="<p>Performs a busy wait.</p><p>Modifications to handle potential clock roll over and sleeping suggested by Montor.</p>"
 Units=Windows
 Depends=ProcessMessages
@@ -596,7 +596,7 @@ Delphi10S=Y
 FPC=Y
 
 [SendKeysToWindow]
-DescEx="Sends key strokes to the window with the handle <var>HWnd</var> that correspond to the characters in string <var>Text</var>."
+DescEx="<p>Sends key strokes to the window with the handle <var>HWnd</var> that correspond to the characters in string <var>Text</var>.</p>"
 Extra="<p>Based on code suggested by DennisLV.</p>"
 Units=Windows,Messages
 SeeAlso=EmptyKeyQueue,PostKeyEx32
@@ -709,7 +709,7 @@ FPC=Y
 [DOSCommandRedirect_A]
 DisplayName="DOSCommandRedirect (TStream overload)"
 DescEx="<p>Executes the given DOS command in a hidden window and redirects its output to the given stream.</p><p>Returns True if the command executes or False otherwise.</p>"
-Extra="Closely based on code contributed by Joe Donth."
+Extra="<p>Closely based on code contributed by Joe Donth.</p>"
 Units=Classes,Windows
 SeeAlso=DOSCommand,DOSCommandRedirect_B
 Snip=614.dat
@@ -949,8 +949,8 @@ Delphi10S=Y
 FPC=N
 
 [IsLibraryInstalled]
-DescEx="Checks if a library with name <var>LibFileName</var> is installed."
-Extra="<strong>Note</strong>: For compilers that don't support <var>SafeLoadLibrary</var>, use <var>Windows.LoadLibrary</var> instead, but note that the FPU control word could be changed and a warning dialog may be displayed if the DLL can't be found."
+DescEx="<p>Checks if a library with name <var>LibFileName</var> is installed.</p>"
+Extra="<p><strong>Note</strong>: For compilers that don't support <var>SafeLoadLibrary</var>, use <var>Windows.LoadLibrary</var> instead, but note that the FPU control word could be changed and a warning dialog may be displayed if the DLL can't be found.</p>"
 Units=SysUtils,Windows
 Snip=118.dat
 Delphi2=N
@@ -972,7 +972,7 @@ Delphi10S=Y
 FPC=Y
 
 [PostKeyEx32]
-DescEx="Manufactures a series of key events. <var>Key</var> is the virtual key code of the required key, <var>Shift</var> is a set of shift keys and <var>SpecialKey</var> informs if the key is a special key such as the numeric pad."
+DescEx="<p>Manufactures a series of key events. <var>Key</var> is the virtual key code of the required key, <var>Shift</var> is a set of shift keys and <var>SpecialKey</var> informs if the key is a special key such as the numeric pad.</p>"
 Extra="<p>Code by Peter Below, contributed by Bill Miller.</p> <p>The events go to the control that has focus. Note that for characters <var>Key</var> is always the upper-case version of the character. Sending without any modifier keys will result in a lower-case character, sending with <var>[ssShift]</var> will result in an upper-case character.</p>"
 Units=Classes,Windows
 SeeAlso=SendKeysToWindow
