--- a/csdb/collection/types.ini
+++ b/csdb/collection/types.ini
@@ -7,7 +7,7 @@
 
 [RawByteString]
 Kind=type
-DescEx="Definition of <var>RawByteString</var> type for non-Unicode compilers."
+DescEx="<p>Definition of <var>RawByteString</var> type for non-Unicode compilers.</p>"
 Extra="<p><strong>Note:</strong> This type is defined in the <var>System</var> unit on Unicode compilers.</p>"
 Snip=358.dat
 Delphi2=Y
@@ -54,7 +54,7 @@ FPC=Y
 
 [TCharSet]
 Kind=type
-DescEx="Definition of a set of characters that can safely be used with Unicode and non-Unicode versions of Delphi, along with versions that don't support <var>TSysCharSet</var>."
+DescEx="<p>Definition of a set of characters that can safely be used with Unicode and non-Unicode versions of Delphi, along with versions that don't support <var>TSysCharSet</var>.</p>"
 Units=SysUtils
 SeeAlso=IsCharInSet
 Snip=250.dat
