--- a/csdb/collection/utils.ini
+++ b/csdb/collection/utils.ini
@@ -320,7 +320,7 @@ Delphi10S=Y
 FPC=Y
 
 [IntToOctal]
-DescEx="Returns a string containing the octal value of integer <var>Value</var>. <var>Digits</var> indicates the minimum number of octal digits to return."
+DescEx="<p>Returns a string containing the octal value of integer <var>Value</var>. <var>Digits</var> indicates the minimum number of octal digits to return.</p>"
 Depends=PadRight
 Snip=255.dat
 Delphi2=Y
@@ -342,7 +342,7 @@ Delphi10S=Y
 FPC=Y
 
 [IntToRoman]
-DescEx="Converts non negative integer <var>AValue</var> into a string containing its roman numeral representation."
+DescEx="<p>Converts non negative integer <var>AValue</var> into a string containing its roman numeral representation.</p>"
 Extra="<p>For values greater than 4999 the output string can get very long and difficult to read.</p><p>Modified from code contributed by Michael Rockett.</p>"
 SeeAlso=IntToNumberText
 Snip=457.dat
@@ -365,7 +365,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsSubClassOf]
-DescEx="Checks if object instance <var>AnInstance</var> is a sub-class of, or the same class as, class <var>AClass</var>."
+DescEx="<p>Checks if object instance <var>AnInstance</var> is a sub-class of, or the same class as, class <var>AClass</var>.</p>"
 Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 Snip=372.dat
 Delphi2=Y
@@ -812,7 +812,7 @@ FPC=Y
 
 [FormInstanceCount_A]
 DisplayName="FormInstanceCount (class type overload)"
-DescEx="Counts and returns the current number of form instances that have, or descend from, class <var>AFormClass</var>."
+DescEx="<p>Counts and returns the current number of form instances that have, or descend from, class <var>AFormClass</var>.</p>"
 Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 Units=Forms
 SeeAlso=FormInstanceCount_B
@@ -837,7 +837,7 @@ FPC=N
 
 [FormInstanceCount_B]
 DisplayName="FormInstanceCount (class name overload)"
-DescEx="Counts and returns the current number of form instances that have class name <var>AFormClassName</var>."
+DescEx="<p>Counts and returns the current number of form instances that have class name <var>AFormClassName</var>.</p>"
 Extra="<p>Contributed by Rubem Nascimento da Rocha.</p> <p>Requires an exact match of class name. Descendant classes are excluded.</p>"
 Units=Forms
 SeeAlso=FormInstanceCount_A
@@ -972,7 +972,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsCharInSet]
-DescEx="Checks if character <var>Ch</var> is in the set of characters <var>Chars</var>."
+DescEx="<p>Checks if character <var>Ch</var> is in the set of characters <var>Chars</var>.</p>"
 Extra="<p>This routine works correctly with Unicode and non-Unicode versions of Delphi.</p>"
 Units=SysUtils
 Depends=TCharSet
@@ -996,7 +996,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsFlagSet]
-DescEx="Checks if the bit flags given by <var>Flags</var> are set in bitmask <var>Mask</var>."
+DescEx="<p>Checks if the bit flags given by <var>Flags</var> are set in bitmask <var>Mask</var>.</p>"
 Extra="<p><var>Flags</var> may contain one or more bit flags. <var>IsFlagSet</var> returns True only if <em>all</em> the bit flags in <var>Flags</var> are set in <var>Mask</var>.</p>"
 Snip=212.dat
 Delphi2=Y
