--- a/csdb/collection/wb.ini
+++ b/csdb/collection/wb.ini
@@ -184,7 +184,7 @@ FPC=N
 
 [WBIsDOMLoaded]
 DescEx="<p>Checks if the given web browser control contains a valid document that supports the DOM.</p>"
-Extra="Examples of document types that support the DOM are HTML and XML. This routine is a combination of versions of the same code contributed by Bill Miller and Peter Johnson."
+Extra="<p>Examples of document types that support the DOM are HTML and XML. This routine is a combination of versions of the same code contributed by Bill Miller and Peter Johnson.</p>"
 SeeAlso=WBWaitForDocToLoad,WBWaitForDOMToLoad
 Units=SysUtils,SHDocVw,MSHTML
 Snip=572.dat
