--- a/csdb/collection/web.ini
+++ b/csdb/collection/web.ini
@@ -121,7 +121,7 @@ Delphi10S=Y
 FPC=Y
 
 [CheckInternetConnection]
-DescEx="Checks if a computer is connected to the internet by trying to resolve the name of the web host specified by <var>AHost</var>."
+DescEx="<p>Checks if a computer is connected to the internet by trying to resolve the name of the web host specified by <var>AHost</var>.</p>"
 Extra="<p><var>AHost</var> should be the web address of some suitable site with a fast response in the form <mono>www.example.com</mono>.</p><p><strong>Note:</strong> Users of Unicode Delphi compilers please note that the use of <var>PAnsiChar</var> is necessary here. Don't pass a pointer to a Unicode string.</p><p>Contributed by Irwin Scollar.</p>"
 Units=WinSock
 Snip=370.dat
