--- a/csdb/collection/winsys.ini
+++ b/csdb/collection/winsys.ini
@@ -52,7 +52,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetCurrentVersionRegStr]
-DescEx="Returns the string value named by <var>ValName</var> from the Windows &quot;CurrentVersion&quot; registry key."
+DescEx="<p>Returns the string value named by <var>ValName</var> from the Windows &quot;CurrentVersion&quot; registry key.</p>"
 Units=Windows
 Depends=GetRegistryString
 Snip=038.dat
@@ -261,7 +261,7 @@ Delphi10S=Y
 FPC=Y
 
 [ScreenResolution]
-DescEx="Returns the current screen resolution in a <var>TSize</var> record whose <var>cx</var> and <var>cy</var> fields give the screen width and height respectively."
+DescEx="<p>Returns the current screen resolution in a <var>TSize</var> record whose <var>cx</var> and <var>cy</var> fields give the screen width and height respectively.</p>"
 Units=Windows,Types
 Snip=509.dat
 Delphi2=N
