--- a/csdb/collection/drive.ini
+++ b/csdb/collection/drive.ini
@@ -215,7 +215,7 @@ FPC=Y
 
 [GetDriveNumber]
 DescEx="<p>Returns the zero based drive number for given drive. -1 is returned if drive name does not start with a valid drive letter in the range A..Z.</p>"
-Extra="<var>Drive</var> can be specified as a disk letter (e.g. <mono>C</mono>), a drive name (e.g <mono>C:</mono> or <mono>C:\</mono>) or an absolute file path on the drive (e.g. <mono>C:\Foo\Bar.txt</mono>)."
+Extra="<p><var>Drive</var> can be specified as a disk letter (e.g. <mono>C</mono>), a drive name (e.g <mono>C:</mono> or <mono>C:\</mono>) or an absolute file path on the drive (e.g. <mono>C:\Foo\Bar.txt</mono>).</p>"
 Units=SysUtils
 Depends=IsCharInSet
 SeeAlso=IsValidDriveNum
