--- a/csdb/collection/windows.ini
+++ b/csdb/collection/windows.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [ClientRectToScreen]
-DescEx="Translates the rectangle <var>CliRect</var>, which has coordinates relative to the client area of control <var>Ctrl</var>, into global screen coordinates and returns the result."
+DescEx="<p>Translates the rectangle <var>CliRect</var>, which has coordinates relative to the client area of control <var>Ctrl</var>, into global screen coordinates and returns the result.</p>"
 Units=Controls,Windows
 SeeAlso=CtrlBoundsToScreen
 Snip=262.dat
@@ -29,7 +29,7 @@ Delphi10S=Y
 FPC=N
 
 [CtrlBoundsToScreen]
-DescEx="Returns the bounding rectangle of control <var>Ctrl</var> in terms of global screen co-ordinates."
+DescEx="<p>Returns the bounding rectangle of control <var>Ctrl</var> in terms of global screen co-ordinates.</p>"
 Units=Classes,Controls,Windows
 Depends=ClientRectToScreen
 SeeAlso=ClientRectToScreen
@@ -264,7 +264,7 @@ Delphi10S=Y
 FPC=Y
 
 [MemoCursorPos]
-DescEx="Returns a <var>TPoint</var> value containing the coordinates of the cursor in the given memo control."
+DescEx="<p>Returns a <var>TPoint</var> value containing the coordinates of the cursor in the given memo control.</p>"
 Extra="<p>Based on code contributed by Shlomo Abuisak.</p>"
 Units=Messages,Windows,StdCtrls
 Snip=334.dat
@@ -287,7 +287,7 @@ Delphi10S=Y
 FPC=N
 
 [ResourceExists]
-DescEx="Checks if a resource with name <var>ResName</var> and type <var>ResType</var> exists in the module with handle <var>Module</var>."
+DescEx="<p>Checks if a resource with name <var>ResName</var> and type <var>ResType</var> exists in the module with handle <var>Module</var>.</p>"
 Extra="<p>This routine is language agnostic: it takes no account of the language of the required resource.</p>"
 Units=Windows
 SeeAlso=ResourceExistsEx
@@ -311,7 +311,7 @@ Delphi10S=Y
 FPC=Y
 
 [ResourceExistsEx]
-DescEx="Checks if a resource with name <var>ResName</var>, type <var>ResType</var> and language ID <var>Language</var> exists in the module with handle <var>Module</var>."
+DescEx="<p>Checks if a resource with name <var>ResName</var>, type <var>ResType</var> and language ID <var>Language</var> exists in the module with handle <var>Module</var>.</p>"
 Units=Windows
 SeeAlso=ResourceExists
 Snip=199.dat
@@ -358,7 +358,7 @@ Delphi10S=Y
 FPC=Y
 
 [SetTransparencyLevel]
-DescEx="Sets the transparency level of the window with handle <var>HWnd</var> to the value given by <var>Level</var>."
+DescEx="<p>Sets the transparency level of the window with handle <var>HWnd</var> to the value given by <var>Level</var>.</p>"
 Extra="<p>This function requires that the window supports layers. The transparency level is in the range [0..255].</p>"
 Units=Windows
 Depends=WindowSupportsLayers
@@ -430,7 +430,7 @@ Delphi10S=Y
 FPC=N
 
 [WinControlScrollbars]
-DescEx="Returns a value that specifies which, if any, scroll bars are displayed by the given <var>TWinControl</var>."
+DescEx="<p>Returns a value that specifies which, if any, scroll bars are displayed by the given <var>TWinControl</var>.</p>"
 Units=Controls,StdCtrls
 Depends=WindowScrollbars
 SeeAlso=HScrollbarHeight,VScrollbarWidth,WindowScrollbars
@@ -550,7 +550,7 @@ Delphi10S=Y
 FPC=N
 
 [IsIntResource]
-DescEx="Checks whether <var>ResID</var> is an integer identifier for a resource."
+DescEx="<p>Checks whether <var>ResID</var> is an integer identifier for a resource.</p>"
 Extra="<p>Emulates the Windows <var>IS_INTRESOURCE</var> macro.</p>"
 SeeAlso=IsEqualResID,ResourceIDToStr
 Units=Windows
@@ -598,7 +598,7 @@ Delphi10S=Y
 FPC=Y
 
 [MakeLangID]
-DescEx="Creates and returns a language identifier from primary language identifier <var>P</var> and sublanguage identifier <var>S</var>."
+DescEx="<p>Creates and returns a language identifier from primary language identifier <var>P</var> and sublanguage identifier <var>S</var>.</p>"
 Extra="<p>Emulates the Windows <var>MAKELANGID</var> macro.</p>"
 SeeAlso=MakeLCID,PrimaryLangID,SubLangID
 Snip=168.dat
@@ -621,7 +621,7 @@ Delphi10S=Y
 FPC=Y
 
 [MakeLCID]
-DescEx="Creates and returns a locale identifier from language identifier <var>LanguageID</var> and sort order identifier <var>SortID</var>."
+DescEx="<p>Creates and returns a locale identifier from language identifier <var>LanguageID</var> and sort order identifier <var>SortID</var>.</p>"
 Extra="<p>Emulates the Windows <var>MAKELCID</var> macro.</p>"
 Units=Windows
 SeeAlso=MakeLangID,PrimaryLangID,SubLangID
@@ -668,7 +668,7 @@ Delphi10S=Y
 FPC=Y
 
 [REWordAtPos]
-DescEx="Returns the word at coordinates (<var>X</var>,<var>Y</var>) in rich edit control <var>RE</var>."
+DescEx="<p>Returns the word at coordinates (<var>X</var>,<var>Y</var>) in rich edit control <var>RE</var>.</p>"
 Extra="<p><strong>Note:</strong> This function assumes that words are separated by one or more of the following white space characters: <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono>.</p><p>Adapted from code contributed by Arno Wolff.</p>"
 Units=SysUtils,Classes,Messages,Windows,ComCtrls,RichEdit
 Depends=IsWhiteSpace
